feat: reoute refactor complete task: A0QZ-T82_Modes_and_calls
